--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <title>Clinica Odontologica</title>
     <meta charset="utf-8">
@@ -10,7 +10,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/js/post_odontologo.js"></script>
 </head>
-
 <body>
 <div class="container">
     <ul class="nav nav-pills">
@@ -23,5 +22,4 @@
     <hr>
 </div>
 </body>
-
 </html>
