--- a/src/main/resources/static/odontologoList.html
+++ b/src/main/resources/static/odontologoList.html
@@ -9,6 +9,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/js/get_odontologo.js"></script>
+    <script type="text/javascript" src="/js/update_odontologo.js"></script>
+    <script type="text/javascript" src="/js/delete_odontologo.js"></script>
 </head>
 <body>
 <div class="container">
@@ -30,7 +32,9 @@
                     <th>Id</th>
                     <th>Nombre</th>
                     <th>Apellido</th>
-                    <th> Matricula</th>
+                    <th>Matricula</th>
+                    <th>Eliminar</th>
+
                 </tr>
                 </thead>
                 <tbody id="odontologoTableBody">
@@ -39,7 +43,35 @@
             </table>
         </div>
     </div>
+    <div class="row">
+        <div class="col-sm-6" style="display: none;
+											background-color:#e6fffa; padding:10px; border-radius:3px"
+             id="div_odontologo_updating">
+            <form id="update_odontologo_form">
+                <div class="form-group">
+                    <label >Id:</label>
+                    <input type="text" class="form-control" id="odontologo_id" readonly>
+                </div>
+                <div class="form-group">
+                    <label >Nombre:</label>
+                    <input type="text" class="form-control" placeholder="nombre" id="nombre">
+                </div>
+                <div class="form-group">
+                    <label >Apellido:</label>
+                    <input type="text" class="form-control" placeholder="apellido" id="apellido">
+                </div>
+                <div class="form-group">
+                    <label >Matricula:</label>
+                    <input type="text" class="form-control" placeholder="matricula" id="matricula">
+                </div>
 
+
+                <button type="submit" class="btn btn-primary">Modificar</button>
+            </form>
+            <div id="response" style="display:none; margin:10px">
+            </div>
+        </div>
+    </div>
     <hr>
 </div>
 </body>
