--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,6 +16,7 @@
         <li class="nav-item">
             <a class="nav-link" href="/odontologoList.html">Listado de Odontologos</a>
             <a class="nav-link" href="/odontologoAlta.html">Alta de Odontologo</a>
+            <a class="nav-link" href="/pacienteList.html">Listado de Pacientes</a>
         </li>
     </ul>
 
