--- a/src/main/resources/static/pacienteAlta.html
+++ b/src/main/resources/static/pacienteAlta.html
@@ -2,20 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Alta Odontologo</title>
+    <title>Alta paciente</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/js/post_odontologo.js"></script>
+    <script type="text/javascript" src="/js/post_paciente.js"></script>
 </head>
 <body>
 <div class="container">
     <ul class="nav nav-pills">
         <li class="nav-item">
-            <a class="nav-link" href="/odontologoList.html">Listar Odontologos</a>
+            <a class="nav-link" href="/pacienteList.html">Listar pacientes</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/">Inicio</a>
@@ -23,8 +23,8 @@
     </ul>
     <div class="row">
         <div class="col-sm-7" style="background-color:#e6fffa; padding:10px; border-radius:3px">
-            <h3>Agregar Odontologo</h3>
-            <form id="add_new_odontologo">
+            <h3>Agregar paciente</h3>
+            <form id="add_new_paciente">
                 <div class="form-group">
                     <label class="control-label" for="nombre">Nombre:</label>
                     <input type="text" class="form-control" id="nombre"
@@ -40,14 +40,14 @@
 
                 <div class="form-group">
                     <label class="control-label" for="matricula">Matricula:</label>
-                    <input type="text" class="form-control" id="matricula"
+                    <input type="text" class="form-control" id="dni"
                            placeholder="Ingrese la matricula"
-                           name="matricula" required></input>
+                           name="dni" required></input>
                 </div>
 
 
                 <button type="submit" class="btn btn-danger"
-                        id="btn-add-new-odontologo">Guardar</button>
+                        id="btn-add-new-paciente">Guardar</button>
             </form>
             <div id="response" style="display:none; margin-top:10px">
             </div>
