--- a/src/main/resources/static/pacienteList.html
+++ b/src/main/resources/static/pacienteList.html
@@ -8,39 +8,41 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/js/get_odontologo.js"></script>
-    <script type="text/javascript" src="/js/update_odontologo.js"></script>
-    <script type="text/javascript" src="/js/delete_odontologo.js"></script>
+    <script type="text/javascript" src="/js/get_paciente.js"></script>
+<script type="text/javascript" src="/js/update_paciente.js"></script>
+<script type="text/javascript" src="/js/delete_paciente.js"></script>
+
+
 </head>
 <body>
 <div class="container">
     <ul class="nav nav-pills">
         <li class="nav-item">
-            <a class="nav-link" href="/odontologoAlta.html">Agregar nuevo</a>
+            <a class="nav-link" href="/pacienteAlta.html">Agregar nuevo</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/odontologoList.html/">Todos</a>
+            <a class="nav-link" href="/pacienteList.html/">Todos</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/">Inicio</a>
         </li>
     </ul>
 
-    <div id="div_odontologo_table">
-        <h1>Odontologos</h1>
+    <div id="div_paciente_table">
+        <h1>Pacientes</h1>
         <div class="row col-md-6 table-responsive">
-            <table id="odontologoTable" class="table table-striped">
+            <table id="pacienteTable" class="table table-striped">
                 <thead>
                 <tr>
                     <th>Id</th>
                     <th>Nombre</th>
                     <th>Apellido</th>
-                    <th>Matricula</th>
+                    <th>Dni</th>
                     <th>Eliminar</th>
 
                 </tr>
                 </thead>
-                <tbody id="odontologoTableBody">
+                <tbody id="pacienteTableBody">
 
                 </tbody>
             </table>
@@ -49,11 +51,11 @@
     <div class="row">
         <div class="col-sm-6" style="display: none;
 											background-color:#e6fffa; padding:10px; border-radius:3px"
-             id="div_odontologo_updating">
-            <form id="update_odontologo_form">
+             id="div_paciente_updating">
+            <form id="update_paciente_form">
                 <div class="form-group">
                     <label >Id:</label>
-                    <input type="text" class="form-control" id="odontologo_id" readonly>
+                    <input type="text" class="form-control" id="paciente_id" readonly>
                 </div>
                 <div class="form-group">
                     <label >Nombre:</label>
@@ -64,8 +66,8 @@
                     <input type="text" class="form-control" placeholder="apellido" id="apellido">
                 </div>
                 <div class="form-group">
-                    <label >Matricula:</label>
-                    <input type="text" class="form-control" placeholder="matricula" id="matricula">
+                    <label >Dni:</label>
+                    <input type="text" class="form-control" placeholder="dni" id="dni">
                 </div>
 
 
